Vertical Overflow removed and Horizontal overflow added to fix vertical scrolling problem

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 *{
     margin: 0;
-    adding: 0;
+    padding: 0;
     overflow-x: hidden;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -10,6 +10,7 @@ html, body{
     background: #111;
     color: aqua;
     font-family: 'Balsamiq Sans', cursive;
+    cursor: default;
 }
 h1.title{
     text-align: center;
